add unit test and fix table accessor issues.

--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,7 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+# Azurite local files
+__blobstorage__/
+__azurite_db*.json
