--- a/src/StorageMate.Core/StorageMate.Core.csproj
+++ b/src/StorageMate.Core/StorageMate.Core.csproj
@@ -1,11 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <PackageOutputPath>$(SolutionDir)NugetOutput</PackageOutputPath>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Xianyi Cui</Authors>
-    <Version>0.1.0</Version>
+    <Version>0.1.2</Version>
     <Description>Basic storage abstraction for common usage.</Description>
+    <PackageLicenseUrl></PackageLicenseUrl>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageTags>Storage, Extended, Helper</PackageTags>
+    <PackageProjectUrl>https://github.com/xycui/StorageMate</PackageProjectUrl>
   </PropertyGroup>
 
 </Project>
