--- a/src/StorageMate.Azure/StorageMate.Azure.csproj
+++ b/src/StorageMate.Azure/StorageMate.Azure.csproj
@@ -7,11 +7,12 @@
     <Authors>Xianyi Cui</Authors>
     <Company />
     <Description>Azure implement for StorageMate.Core interfaces. Including Table/Blob based implementing.</Description>
-    <Version>0.1.2</Version>
+    <Version>0.2.1</Version>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageProjectUrl>https://github.com/xycui/StorageMate</PackageProjectUrl>
-    <PackageTags>Storage, Azure, Extended, Helper</PackageTags>
+    <PackageTags>Storage, Azure, Extended, Helper, Triple</PackageTags>
+    <PackageReleaseNotes>Add stats ability to the table accessor.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
