--- a/src/StorageMate.Azure/StorageMate.Azure.csproj
+++ b/src/StorageMate.Azure/StorageMate.Azure.csproj
@@ -7,12 +7,12 @@
     <Authors>Xianyi Cui</Authors>
     <Company />
     <Description>Azure implement for StorageMate.Core interfaces. Including Table/Blob based implementing.</Description>
-    <Version>0.2.6</Version>
+    <Version>0.2.7</Version>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageProjectUrl>https://github.com/xycui/StorageMate</PackageProjectUrl>
     <PackageTags>Storage, Azure, Extended, Helper, Triple</PackageTags>
-    <PackageReleaseNotes>Add stats ability to the table accessor.</PackageReleaseNotes>
+    <PackageReleaseNotes>prevent from writting const fields</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
